--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Website for Austin Redenbaugh</title>
+        <h1> Website for Austin Redenbaugh</h1>
     </head>
 
     <body>
