--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <h1> Website for Austin Redenbaugh</h1>
+        <h1> Austin Redenbaugh's CS Projects</h1>
     </head>
 
     <body>
         <ul>
-            <li> Item 1 </li>
+            <li href="https://austinredenbaugh.github.io/MyWebsite/minesweeper"> 
+                Minesweeper (HTML, JS, CSS) </li>
             <li> Item 2 </li>
         </ul>
 
