--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <h1> Austin Redenbaugh's CS Projects</h1>
+        <link rel="stylesheet"  href= "a3css.css"> 
+        <meta charset="utf-8">
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="a3script.js"></script>
     </head>
 
     <body>
