--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <body>
         <ul>
-            <li href="https://austinredenbaugh.github.io/MyWebsite/minesweeper"> 
-                Minesweeper (HTML, JS, CSS) </li>
+            <li> <a href ="https://austinredenbaugh.github.io/MyWebsite/minesweeper">>Minesweeper (HTML, JS, CSS) </a></li>
             <li> Item 2 </li>
         </ul>
 
