--- a/minesweeper.html
+++ b/minesweeper.html
@@ -8,6 +8,9 @@
         <script src="a3script.js"></script>
     </head>
     <body>
+        <div>
+            <button href="https://austinredenbaugh.github.io/MyWebsite/">Back to Austin's Site</button>
+        </div>
         <div class="Minesweeper">
             <h1>Minesweeper by Tin:</h1>
             <div class="Rules/Inputs">
