--- a/minesweeper.html
+++ b/minesweeper.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div>
-            <button href="https://austinredenbaugh.github.io/MyWebsite/">Back to Austin's Site</button>
+            <a href="https://austinredenbaugh.github.io/MyWebsite/" class="button">Back to Austin's Site</a>
         </div>
         <div class="Minesweeper">
             <h1>Minesweeper by Tin:</h1>
