--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <ul>
             <li> <a href ="https://austinredenbaugh.github.io/MyWebsite/minesweeper"> Minesweeper (HTML, JS, CSS) </a></li>
-            <li> Item 2 </li>
+            <li> <a href ="https://austinredenbaugh.github.io/MyWebsite/minesweeper"> FLUBER (AJAX, API) </li>
         </ul>
 
 
