--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <body>
         <ul>
+            <li> <a href ="https://mealsnag.com"> Start Up Company: Mealsnag </a></li>
             <li> <a href ="https://austinredenbaugh.github.io/MyWebsite/minesweeper"> Minesweeper (HTML, JS, CSS) </a></li>
-            <li> <a href ="https://austinredenbaugh.github.io/MyWebsite/fluber"> FLUBER (AJAX, API) </li>
+            <li> <a href ="https://austinredenbaugh.github.io/MyWebsite/fluber"> FLUBER (AJAX, API) </a> </li>
         </ul>
 
 
